# whiskers-launcher-runner-extension

./: Cargo.toml  README.md  manifest.json  manifest.yml
src/: main.rs
src/actions/: mod.rs
src/icons/: mod.rs
src/results/: mod.rs
